Backporting commit 423478 by goutte to the branch.

This fixes the 0+0 and 0-0 glitch (0+0 != NaN).

BUG:106605

svn path=/branches/KDE/3.4/kdeutils/kcalc/; revision=423486